--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Loadingscreen"></activity>
+        <activity android:name=".Splash"></activity>
+        <activity android:name=".Loadingscreen" />
         <activity android:name=".Caloriecount" />
         <activity android:name=".Exercise1" />
         <activity android:name=".Junkfood" />
